<resources>
    <string name="app_name">VideoPileDemo</string>
    <string name="virtual_voilt_name">虚拟线圈</string>
    <string name="mainBrowsingInterface">主浏览界面</string>
    <string name="systemConfiguration">系统配置</string>
    <string name="userControl">用户管理</string>
    <string name="equipmentManagement">设备管理</string>
    <string name="storagePlan">存储计划</string>
    <string name="incidentManagement">事件管理</string>
    <string name="eventQuery">历史事件查询</string>
    <string name="warningQuery">历史警告查询</string>
    <string name="logSearch">日志搜索</string>
    <string name="RVC">实时视频</string>
    <string name="historicalStorage">历史存储</string>
    <string name="exercise">运动</string>
    <string name="plateNumber">车牌</string>
    <string name="fauna">物类</string>
    <string name="start">关闭</string>
    <string name="superposition">叠加</string>
    <string name="deviceList">设备列表</string>
    <string name="facilityone">摄像头1</string>
    <string name="facilitytwo">摄像头2</string>
    <string name="plateName">识别结果</string>
    <string name="plateNumbles">车牌号</string>
    <string name="confirm">确定</string>
    <string name="abnormity">异常</string>
    <string name="alarm">告警</string>
    <string name="incident">事件</string>
    <string name="consultName">咨询</string>
    <string name="consult">快捷服务为你一键咨询</string>
    <string name="chrgeName">充电</string>
    <string name="chrgeContext">一键充电解决无电烦恼</string>
    <string name="maintainName">维护</string>
    <string name="maintainContext">你的满意是我最大的鼓励</string>
    <string name="parkName">停车</string>
    <string name="parkContext">规范停车创造文明城市</string>
    <string name="payName">付费</string>
    <string name="payContext">快捷支付享受科技生活</string>
    <string name="beginTimeName">开始时间:</string>
    <string name="beginTimeContent">2018/06/05/15/07</string>
    <string name="timeBucketName">停车时长:</string>
    <string name="timeBucketContent">02:00</string>
    <string name="plateNumbersName">车牌号码:</string>
    <string name="plateNumbersContent">豫.A888888</string>
    <string name="endtimeName">结束时间:</string>
    <string name="endtimeContent">2018/06/05/19/07</string>
    <string name="parkingFeeName">停车费用:</string>
    <string name="parkingFeeContent">￥10.00</string>
    <string name="ordinal">序号</string>
    <string name="time">时间</string>
    <string name="event">事件源</string>
    <string name="genre">物体类</string>
    <string name="state">状态</string>
    <string name="plateNumbers">车牌号</string>
    <string name="perch">占位比</string>
    <string name="top">图片</string>
    <string name="historicalEvents">历史事件</string>

</resources>
