<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pagesetting"
    tools:context="com.example.administrator.videopiledemo.videoActivity.maintain.MaintainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2">
        <RelativeLayout
            android:id="@+id/rl_backmaintain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bt_backmaintain"
                style="@style/backtrack" />
            <TextView
                android:text="返回"
                android:layout_toRightOf="@id/bt_backmaintain"
                style="@style/backtrackName" />
        </RelativeLayout>
        <ImageView
            android:id="@+id/iv_maintainsos"
            style="@style/sosImage" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        ></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"></LinearLayout>
        <!--左-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <!--主浏览界面-->
            <LinearLayout
                android:id="@+id/ll_mainBrowsingInterface"
                style="@style/ll_zuo_maintain">
                <Button
                    android:id="@+id/bt_mainBrowsingInterface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/browsinginterface"
                    />
                <TextView
                    android:text="@string/mainBrowsingInterface"
                    style="@style/text_maintain" />
            </LinearLayout>
            <!--用户管理-->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/ll_userControl"
                style="@style/ll_zuo_maintain">
                <Button
                    android:id="@+id/bt_userControl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/usercontrol"
                    />
                <TextView
                    style="@style/text_maintain"
                    android:text="@string/userControl"
                    />
            </LinearLayout>
            <!--事件管理-->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/ll_incidentManagement"
                style="@style/ll_zuo_maintain">
                <Button
                    android:id="@+id/bt_incidentManagement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/incidentmanagement"
                    />
                <TextView
                    style="@style/text_maintain"
                    android:text="@string/incidentManagement"
                   />
            </LinearLayout>
        </LinearLayout>
        <!--中-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--日志搜索-->
            <LinearLayout
                android:id="@+id/ll_logSearch"
                style="@style/ll_zuo_maintain">
                <Button
                    android:id="@+id/bt_logSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/logsearch"
                    />
                <TextView
                    style="@style/text_maintain"
                    android:text="@string/logSearch"
                    />
            </LinearLayout>
            <!--设备管理-->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/ll_equipmentManagement"
                style="@style/ll_zuo_maintain">
                <Button
                    android:id="@+id/bt_equipmentManagement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/equipmentmanagement"
                    />
                <TextView
                    style="@style/text_maintain"
                    android:text="@string/equipmentManagement"
                    />
            </LinearLayout>

        </LinearLayout>

        <!--右-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <!--系统设置-->
            <LinearLayout

                android:id="@+id/ll_systemConfiguration"
                style="@style/ll_zuo_maintain">
                <Button
                    android:id="@+id/bt_systemConfiguration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/systemconfiguration"
                    />
                <TextView
                    style="@style/text_maintain"
                    android:text="@string/systemConfiguration"
                  />
            </LinearLayout>
            <!--系统设置-->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/ll_storagePlan"
                style="@style/ll_zuo_maintain">
                <Button
                    android:id="@+id/bt_storagePlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/storageplan"
                    />
                <TextView
                    style="@style/text_maintain"
                    android:text="@string/storagePlan"
                   />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
